2005-04-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Fixed bug with xmlify not checking for string.

	* src/legacy/icqt.py:
	Fixed problem with variable being used that wasn't ever set.

2005-03-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/webadmin/.cvsignore:
	* src/tlib/jabber/.cvsignore:
	* src/tlib/.cvsignore:
	* src/legacy/.cvsignore:
	* src/.cvsignore:
	Removed legacy CVS files.

2005-03-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added Martin von Loewis's xmlify function.

	* src/main.py:
	Fixed what is probably the cause of the infinite loop stream error.
	Bug id 45.

2005-03-13  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Added check to make sure we're being passed an int.

2005-03-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/exception.py:
	* src/main.py:
	Added new exception handler.

	* src/debug.py:
	Changed logging format slightly.

2005-03-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Upped version to 0.6 in preparation for release.

	* src/lang.py:
	Added french translation.

	* src/main.py:
	Added required python version check.

	* src/tlib/oscar.py:
	Added &quot; conversion to dehtml.

	* src/legacy/icqt.py:
	Added dehtml, which is necessary for receiving messages from AIM
	users.

	* src/utils.py:
	Fixed stupid typo.

	* src/main.py:
	Forgot to import properly.

2005-03-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added regex check for illegal control chars.

	* src/session.py:
	Fixed lack of calling SessionResource with all args.

	* src/legacy/glue.py:
	Repaired resourceOffline typo.

2005-03-07  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Altered utf8encode to use tests offered by Florian.

2005-03-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Killed unnecessary error report.

	* src/main.py:
	* src/session.py:
	* src/register.py:
	* src/legacy/aimt.py:
	* src/legacy/glue.py:
	* src/xmlconfig.py: